# vhdl-i2c

./: .gitignore  README.md  flake.nix  run.py
doc/: defaults.yaml  figure_placement.tex  index.md  pandoc-svg.py  presentation.tex
doc/blocks/: vec.conf
doc/blocks/markdown/: address_detector.markdown.md  address_generator.markdown.md  i2c_slave_state.markdown.md  master.markdown.md  master_state.markdown.md  rx.markdown.md  slave.markdown.md  (+4 more)
doc/img/: i2c_slave.tex
mcu_tests/slave_counter/: Cargo.toml  flake.nix
mcu_tests/slave_regs/: Cargo.toml  openocd.cfg  openocd.gdb  toolchain.toml
mcu_tests/slave_regs/.cargo/: config
mcu_tests/slave_regs/src/: main.rs
src/i2c/: address_detector.vhd  address_generator.vhd  master.vhd  master_state.vhd  rx.vhd  scl_generator.vhd  sdascl_enabler.vhd  slave.vhd  slave_state.vhd  startstop_condition_detector.vhd  startstop_condition_generator.vhd  tx.vhd
src/mcu_slave/: counter.vhd  regs.vhd
src/ssd1306/: counter.vhd  full_on.vhd  ssd1306_counter_master_logic.vhd  ssd1306_pkg.vhd
src/utils/: bcd_counter.vhd  clock_divider.vhd  counter.vhd  delay.vhd  metastability_filter.vhd  open_drain_buffer.vhd  sync_edge_detector.vhd
tb/i2c/: address_detector_tb.vhd  address_generator_tb.vhd  master_tb.vhd  rx_tb.vhd  scl_generator_tb.vhd  slave_tb.vhd  startstop_condition_detector_tb.vhd  startstop_condition_generator_tb.vhd  tb_i2c_master_pkg.vhd  tb_i2c_pkg.vhd  tb_i2c_slave_pkg.vhd  tb_pkg.vhd  tx_tb.vhd
tb/mcu_slave/: counter_tb.vhd  regs_tb.vhd
tb/ssd1306/: counter_tb.vhd  full_on_tb.vhd
vivado/: nsv_i2c.xpr
(+6 files in other folders)
